samples/_failures_safe/1761535386_026062_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0a46297c.c: In function ‘main’:
./samples/SAFE/__tmp_0a46297c.c:156:15: error: ‘filter’ undeclared (first use in this function)
  156 |     if (fgets(filter
      |               ^~~~~~
./samples/SAFE/__tmp_0a46297c.c:156:15: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_0a46297c.c:156:21: error: expected ‘)’ at end of input
  156 |     if (fgets(filter
      |              ~      ^
      |                     )
./samples/SAFE/__tmp_0a46297c.c:156:9: error: too few arguments to function ‘fgets’
  156 |     if (fgets(filter
      |         ^~~~~
In file included from /usr/include/stdio.h:980,
                 from ./samples/SAFE/__tmp_0a46297c.c:2:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:196:1: note: declared here
  196 | fgets (char *__restrict __s, int __n, FILE *__restrict __stream)
      | ^~~~~
./samples/SAFE/__tmp_0a46297c.c:156:5: error: expected declaration or statement at end of input
  156 |     if (fgets(filter
      |     ^~
